[project]
name = "STOCK"
version = "0.1.0"
description = "Enterprise vending analytics and stock management pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "X-Limited" }]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["archive", "scripts/archive", "scripts/complete-history", "scripts/full", "python-history"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # Line too long (formatter handles it)
    "B008", # Function call in default argument (common with tkinter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
